tests/sksl/errors/ReservedNameSizeof.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'sizeof'
1 error
